--- a/src/frontend/templates/cart.html
+++ b/src/frontend/templates/cart.html
@@ -81,6 +81,20 @@
                                     </strong>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col">
+                                    <a href="/giftwrapping/toggle-giftwrap?itemid={{ .Item.Id }}">
+                                        Apply Gift Wrapping ({{ renderMoney .GiftWrappingPrice }})
+                                    </a>
+                                </div>
+                                {{ if .GiftWrappingPrice > 0 }}
+                                <div class="col pr-md-0 text-right">
+                                    <strong>
+                                        {{ renderMoney .GiftWrappingPrice }}
+                                    </strong>
+                                </div>
+                                {{ end }}
+                            </div>
                         </div>
                     </div>
                     {{ end }}
