[Sprint A] Microservice Package PoC

--- a/src/frontend/templates/cart.html
+++ b/src/frontend/templates/cart.html
@@ -83,7 +83,7 @@
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    <a href="/giftwrapping/toggle-giftwrap?itemid={{ .Item.Id }}">
+                                    <a href="/giftwrapping/getGiftWrappingPrice?quantity={{ .Quantity }}&productID={{ .Item.Id}}">
                                         Apply Gift Wrapping ({{ renderMoney .GiftWrappingPrice }})
                                     </a>
                                 </div>
