--- a/src/frontend/templates/cart.html
+++ b/src/frontend/templates/cart.html
@@ -83,17 +83,14 @@
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    <a href="/giftwrapping/getGiftWrappingPrice?quantity={{ .Quantity }}&productID={{ .Item.Id}}">
-                                        Apply Gift Wrapping ({{ renderMoney .GiftWrappingPrice }})
-                                    </a>
+                                    <input type="checkbox" />
+                                    Apply Gift Wrapping
                                 </div>
-                                {{ if .GiftWrappingPrice > 0 }}
                                 <div class="col pr-md-0 text-right">
                                     <strong>
                                         {{ renderMoney .GiftWrappingPrice }}
                                     </strong>
                                 </div>
-                                {{ end }}
                             </div>
                         </div>
                     </div>
